--1.5--
IDs to string override
polyID length propety
polyID to string functions

--1.4--
Character speed stat
item stacks
IDObject renamed to ID32
ID64 introduced, with 64 bit integer
ID16 bit IDs
PolyLevelledID class type added

--1.3.1--
Bugfix of constructors for maps
New FloatMap

--1.3--
Added messages and notification text types

--1.2.0.1--
Added int shapes atop of existing float sizes
Added boolean and int map types
Extended with basic game types character and stats
--ID object and player classes
Added value types
-Fixes:
clickable object namespace fix
protected values for def

--1.1--
Added geometric shapes
Named object now a protected string